syntax = "proto3";

package server.link;

message DeleteLinkRequest {
  // One of following fields is required.
  string plaid_item_id = 1;

  int32 link_id = 2;
}

message DeleteLinkResponse {}

